- Mouse cursor will now hide when not used for some time
- Make sure news and update file list aren't cached (from Aethyra)

0.0.25 (27 July 2008)
- Added support for whispering to other players
- Added ability to ignore other players
- Added command line argument for specifying the update host (-H)
- Added support for receiving the update host from the server
- Added support for displaying a shield sprite
- Added shortcut window, allowing you to quickly access inventory items
- Added message when gaining money from trade or quest
- Added support for an arbitrary number of map layers
- Added support for basing one sprite definition on another
- Added the possibility to assign particle effects to NPCs
- Added remembering whether windows are visible or not
- Updated to work with Guichan 0.8.x
- Improved accuracy of monster targeting with the mouse
- Page up and page down will now scroll the chat window
- Item icons are now loaded on demand and unloaded when no longer used
- Fixed display of critical hits
- Fixed multi-channel image dyeing
- Fixed updating of money display after buying

0.0.24.1 (7 April 2008)
- Added /clear command to clear chat window
- Added ability to close quit dialog by pressing ESC
- Added key for targetting nearest player
- Added the possibility to assign particle effects to monsters
- Added possibility to pass through players with key controls
- Fixed crash on exit after connection to server was lost
- Fixed initialization of some variables
- Fixed an error with chat messages without a sender that include a colon
- Fixed minimap to not keep reappearing when hidden
- Fixed a GCC 4.3 compile error
- Fixed music loading from non-default location
- Fixed crash on trying to show out of range emoticon
- Updated Dev-C++ and Code::Blocks project files

0.0.24 (24 December 2007)
- Added female specific hair styles
- Added user-definable key settings
- Added XP gaining notification
- Added close button to most windows